kubernetes/service-deploy-petclinic.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  type: NodePort
  ports:
    - port: 8088
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: petclinic
