kubernetes/service-stateful-petclinic.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    app: db
